--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -14,6 +14,7 @@
 		{{!-- {{> site__navigation }} --}}
 		{{!-- {{> page__title }} --}}
 		{% body %}
+		{{> action-nav }}
 		{{> global__footer }}
 	</div>
 
