--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -1,24 +1,28 @@
 <footer class="global__footer">
     <div class="inner">
-        {{!-- <div class="center"><a class="btn btn-small" href="#top"><span class="arrow-up"></span>Back to Top<span class="arrow-up"></span></a></div> --}}
-
-
         <div class="grid  pt2">
-            <div class="grid-cell  u-medium-1-12  mr2  pt1">
-                <div class="global__footer__watermark">
-                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 206 236"><defs><style>.cls-1{opacity:.3;}.cls-2{fill:#122d52;}.cls-3{fill:#fff;}.cls-4{fill:none;}</style></defs><title>Artboard 1</title><g class="cls-1"><path class="cls-2" d="M191.66,140.76l-1,13.14q4.92-.89,9.61-1.85l3.41-8.46Q197.7,142.09,191.66,140.76Z"/><path class="cls-2" d="M1.82,143.59l3.42,8.59c3,.63,6.16,1.23,9.35,1.8l-.78-13.22Q7.77,142.08,1.82,143.59Z"/><path class="cls-2" d="M21.08,37.76v78.35c0,56.49,66.19,90.5,81.64,97.67,15.44-7.16,81.63-41.17,81.63-97.67V37.76a204.65,204.65,0,0,0-81.63-17.44A204.65,204.65,0,0,0,21.08,37.76Z"/><path class="cls-3" d="M102.73,11.89c-52.1,0-90.09,20.59-90.09,20.59v83.64c0,70.21,90.09,106.91,90.09,106.91s90.08-36.69,90.08-106.91V32.47S154.82,11.89,102.73,11.89Zm81.63,91.71v12.52c0,56.5-66.19,90.5-81.63,97.67-15.45-7.17-81.64-41.17-81.64-97.67V37.76a204.65,204.65,0,0,1,81.64-17.44,204.65,204.65,0,0,1,81.63,17.44Z"/><path class="cls-4" d="M12.64,32.47v83.64c0,70.21,90.09,106.91,90.09,106.91s90.08-36.69,90.08-106.91V32.47s-38-20.59-90.08-20.59S12.64,32.47,12.64,32.47Zm171.72,71.12v12.52c0,56.5-66.19,90.5-81.63,97.67-15.45-7.17-81.64-41.17-81.64-97.67V37.76a204.65,204.65,0,0,1,81.64-17.44,204.65,204.65,0,0,1,81.63,17.44Z"/><path class="cls-2" d="M196.74,25.2c-1.63-.88-40.44-21.59-94-21.59S10.32,24.32,8.7,25.2L4.37,27.55v88.57c0,74.91,91.35,113,95.24,114.57l3.12,1.27,3.12-1.27c3.89-1.59,95.22-39.66,95.22-114.57V27.55Zm-3.94,90.91c0,70.21-90.08,106.91-90.08,106.91S12.64,186.33,12.64,116.12V32.47s38-20.59,90.09-20.59S192.8,32.47,192.8,32.47Z"/><path class="cls-3" d="M72.81,137.25v7.9c11.62,0,19,1.88,19,16v18.23h21.75V161.2c0-14.24,8.31-16,19-16v-7.9Z"/><path class="cls-2" d="M9.52,152.71A420.29,420.29,0,0,0,102.74,163a420.35,420.35,0,0,0,93.18-10.32l-2.68,35.09a453,453,0,0,1-90.5,9,452.84,452.84,0,0,1-90.55-9L9.52,152.71m194.12-9.08A411.28,411.28,0,0,1,102.74,156,411.3,411.3,0,0,1,1.84,143.63l-.07,0L5.58,193.6a458,458,0,0,0,97.16,10.28,458.08,458.08,0,0,0,97.11-10.27l3.81-50Z"/><path class="cls-3" d="M9.52,152.64A420.27,420.27,0,0,0,102.74,163a420.33,420.33,0,0,0,93.18-10.32l-2.68,35.08a452.39,452.39,0,0,1-90.5,9,452.24,452.24,0,0,1-90.54-9L9.52,152.64"/><path class="cls-2" d="M49.76,186.84V172.5l-3.64,2.81L43.72,172l6.43-4.72H54.4v19.54Z"/><path class="cls-2" d="M86.64,190.35c-3.86,0-7.34-2-7.34-6.07a4.88,4.88,0,0,1,3.51-4.67v0a4.36,4.36,0,0,1-3-4.22c0-3.61,3.2-5.57,6.81-5.57s6.82,1.87,6.82,5.49a4.31,4.31,0,0,1-3,4.27v.08a4.81,4.81,0,0,1,3.5,4.64C94,188.36,90.5,190.35,86.64,190.35Zm0-8.91a2.6,2.6,0,0,0-2.73,2.65,2.72,2.72,0,0,0,5.43,0A2.62,2.62,0,0,0,86.64,181.43Zm0-8.08a2.19,2.19,0,0,0-2.31,2.23,2.24,2.24,0,0,0,2.31,2.32A2.32,2.32,0,0,0,89,175.59,2.26,2.26,0,0,0,86.64,173.36Z"/><path class="cls-2" d="M121.94,189.82h-5.38l7.92-15.55h-9.24v-4h14.18V174Z"/><path class="cls-2" d="M155.94,185.9V171.56l-3.64,2.81-2.4-3.28,6.43-4.72h4.25V185.9Z"/><path class="cls-3" d="M120.95,62.34s7.78,14.4-4.12,27.56c-3.54-9.78-22.83-32-18-49,.79-2.76,2.94-7.94,2.94-7.94S74.29,52.84,80.11,74.32c4.7,17.38,25.41,38.36,18.25,49.43-4.71,7.27,13.17-7.76,15.2-10,5.78-5.33,16.15-16.2,16.87-26.28C131.41,73.46,120.95,62.34,120.95,62.34Z"/></g></svg>
+            <div class="footer__grid-cell">
+                <div class="grid-pad-1x">
+                    <h2 class="h5">Information For</h2>
+                    <ul class="">
+                        <li><a href="/admissions/">Prospective Students</a></li>
+                        <li><a href="https://my.bethel.edu/">Current Students</a></li>
+                        <li><a href="/alumni/">Alumni</a></li>
+                        <li><a href="/parents/">Parents &amp; Families</a></li>
+                        <li><a href="https://my.bethel.edu/">Faculty &amp; Staff</a></li>
+                        <li><a href="https://www.bethel.edu/church-relations/">Churches</a></li>
+                    </ul>
                 </div>
             </div>
 
-            <div class="grid-cell">
+            <div class="footer__grid-cell --address u-medium-2-5">
                 <div class="grid-pad-1x">
                     <div itemscope="" itemtype="https://schema.org/CollegeOrUniversity" class="bd">
                         <p class="h3 mb0"><span itemprop="legalName">Bethel University</span></p>
                         <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-                            <address><span itemprop="streetAddress">3900 Bethel Drive</span>
-                                <br/><span itemprop="addressLocality">St. Paul</span>, <span itemprop="addressRegion">MN</span> <span itemprop="postalCode">55112</span></address>
-                            <p><span itemprop="telephone">651.638.6400</span></p>
-                            <p><a href="https://www.bethel.edu/about/maps-directions/">
+                            <address><span itemprop="streetAddress">3900 Bethel Drive</span><br/>
+                            <span itemprop="addressLocality">St. Paul</span>, <span itemprop="addressRegion">MN</span> <span itemprop="postalCode">55112</span></address>
+                            <p><a href="/about/maps-directions/">
                                 <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                     <title>Location</title>
                                     <desc>Location icon</desc>
@@ -26,14 +30,12 @@
                                 </svg>Maps &amp; Directions
                             </a>
                             </p>
+                            <p><span itemprop="telephone">651.638.6400</span></p>
                         </div>
                     </div>
 
 
-                    <div class="">
-                    
-                        {{!-- <a href="https://www.facebook.com/betheluniversity">#svgIcon("facebook")</a> --}}
-                        <a href="$">
+                        <a href="https://www.facebook.com/betheluniversity">
                             <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                 <title>Facebook</title>
                                 <desc>Facebook icon</desc>
@@ -42,14 +44,14 @@
                                 <path d="M26.667 0h-21.333c-2.933 0-5.334 2.4-5.334 5.334v21.332c0 2.936 2.4 5.334 5.334 5.334l21.333-0c2.934 0 5.333-2.398 5.333-5.334v-21.332c0-2.934-2.399-5.334-5.333-5.334zM27.206 16h-5.206v14h-6v-14h-2.891v-4.58h2.891v-2.975c0-4.042 1.744-6.445 6.496-6.445h5.476v4.955h-4.473c-1.328-0.002-1.492 0.692-1.492 1.985l-0.007 2.48h6l-0.794 4.58z"></path>
                             </svg>
                         </a>
-                        <a href="">
+                        <a href="https://twitter.com/BethelU">
                             <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                 <title>Twitter</title>
                                 <desc>Twitter icon</desc>
                             <path d="M32 6.076c-1.177 0.522-2.443 0.875-3.771 1.034 1.355-0.813 2.396-2.099 2.887-3.632-1.269 0.752-2.674 1.299-4.169 1.593-1.198-1.276-2.904-2.073-4.792-2.073-3.626 0-6.565 2.939-6.565 6.565 0 0.515 0.058 1.016 0.17 1.496-5.456-0.274-10.294-2.888-13.532-6.86-0.565 0.97-0.889 2.097-0.889 3.301 0 2.278 1.159 4.287 2.921 5.465-1.076-0.034-2.088-0.329-2.974-0.821-0.001 0.027-0.001 0.055-0.001 0.083 0 3.181 2.263 5.834 5.266 6.437-0.551 0.15-1.131 0.23-1.73 0.23-0.423 0-0.834-0.041-1.235-0.118 0.835 2.608 3.26 4.506 6.133 4.559-2.247 1.761-5.078 2.81-8.154 2.81-0.53 0-1.052-0.031-1.566-0.092 2.905 1.863 6.356 2.95 10.064 2.95 12.076 0 18.679-10.004 18.679-18.68 0-0.285-0.006-0.568-0.019-0.849 1.283-0.926 2.396-2.082 3.276-3.398z"></path>
                             </svg>
                         </a>
-                        <a href="">
+                        <a href="https://www.instagram.com/bethelumn">
                             <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                 <title>Instagram</title>
                                 <desc>Instagram icon</desc>
@@ -62,27 +64,26 @@
                                 <desc>LinkedIn icon</desc>
                             <path d="M26.625 0h-21.25c-2.956 0-5.375 2.419-5.375 5.375v21.25c0 2.956 2.419 5.375 5.375 5.375h21.25c2.956 0 5.375-2.419 5.375-5.375v-21.25c0-2.956-2.419-5.375-5.375-5.375zM12 26h-4v-14h4v14zM10 10c-1.105 0-2-0.895-2-2s0.895-2 2-2 2 0.895 2 2-0.895 2-2 2zM26 26h-4v-8c0-1.105-0.895-2-2-2s-2 0.895-2 2v8h-4v-14h4v2.483c0.825-1.133 2.086-2.483 3.5-2.483 2.485 0 4.5 2.239 4.5 5v9z"></path>
                             </svg>
-
                         </a>
-                    </div>
+                        <a href="https://www.youtube.com/betheluniversity">
+                        <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+                            <title>YouTube</title>
+                            <desc>YouTube icon</desc>
+                        <path d="M26 4h-20c-3.3 0-6 2.7-6 6v12c0 3.3 2.7 6 6 6h20c3.3 0 6-2.7 6-6v-12c0-3.3-2.7-6-6-6zM12 24v-16l10 8-10 8z"></path>
+                        </svg>
+                        </a>
+                        <a href="https://vimeo.com/betheluniversity">
+                            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <title>Vimeo</title>
+                            <desc>Viemo icon</desc>
+                            <path d="M31.988 8.563c-0.144 3.113-2.319 7.381-6.525 12.794-4.35 5.65-8.031 8.481-11.044 8.481-1.863 0-3.444-1.719-4.731-5.163-0.863-3.156-1.719-6.313-2.581-9.469-0.956-3.444-1.981-5.162-3.081-5.162-0.237 0-1.075 0.506-2.513 1.506l-1.506-1.938c1.581-1.387 3.138-2.775 4.669-4.162 2.106-1.819 3.688-2.775 4.744-2.875 2.487-0.237 4.025 1.463 4.6 5.106 0.619 3.931 1.050 6.375 1.294 7.331 0.719 3.263 1.506 4.894 2.369 4.894 0.669 0 1.675-1.056 3.019-3.175 1.337-2.113 2.056-3.725 2.156-4.831 0.194-1.825-0.525-2.744-2.156-2.744-0.769 0-1.556 0.175-2.369 0.525 1.575-5.15 4.575-7.65 9.012-7.506 3.281 0.087 4.831 2.219 4.644 6.388z"></path>
+                            </svg>
+                        </a>
+
                 </div>
             </div>
 
-            <div class="grid-cell">
-                <div class="grid-pad-1x">
-                    <h2 class="h5">Information For</h2>
-                    <ul class="">
-                        <li><a href="/admissions/">Prospective Students</a></li>
-                        <li><a href="https://blink.bethel.edu/">Current Students</a></li>
-                        <li><a href="/alumni/">Alumni</a></li>
-                        <li><a href="/parents/">Parents &amp; Families</a></li>
-                        <li><a href="//blink.bethel.edu/">Faculty &amp; Staff</a></li>
-                        <li><a href="//www.bethel.edu/church-relations/">Churches</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="grid-cell">
+            <div class="footer__grid-cell">
                 <div class="grid-pad-1x">
                     <h2 class="h5">Resources</h2>
                     <ul class="">
@@ -90,6 +91,7 @@
                         <li><a href="https://blink.bethel.edu/">Calendar</a></li>
                         <li><a href="/alumni/">Library</a></li>
                         <li><a href="/parents/">Questions &amp; Comments</a></li>
+                        <li><a href="https://www.bethel.edu/human-resources/complaints-concerns/">Title IX Concerns</a></li>
                     </ul>
                     <p><a class="btn" href="https://www.bethel.edu/giving/">Support Bethel</a></p>
                 </div>
@@ -97,6 +99,6 @@
         </div>
     </div>
     <div class="global__footer__copyright">
-        <p class="center pa1"><small>© 2004-2018 Bethel University | <a href="https://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
+        <p class="center pa1"><small>© 2018 Bethel University | <a href="#">Privacy Policy</a></small></p>
     </div>
 </footer>
