--- a/src/css/modules/action-nav.css
+++ b/src/css/modules/action-nav.css
@@ -1,9 +1,9 @@
 .action-nav {
 	display: none;
-	font-family: $gotham;
+	 
 	font-size: .9rem;
 
-	@mixin respond-min $medium {
+	@mixin respond-min $large {
 		display: flex;
 		position: fixed;
 		right:  0;
