--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -1,29 +1,29 @@
 <footer class="global__footer">
     <div class="inner">
         <div class="grid  pt2">
-            <div class="footer__grid-cell">
+            <div class="footer__gridCell">
                 <div class="grid-pad-1x">
-                    <h2 class="h5">Information For</h2>
+                    <h2 class="h5 mt1--medium">Information For</h2>
                     <ul class="">
                         <li><a href="/admissions/">Prospective Students</a></li>
                         <li><a href="https://my.bethel.edu/">Current Students</a></li>
                         <li><a href="/alumni/">Alumni</a></li>
                         <li><a href="/parents/">Parents &amp; Families</a></li>
                         <li><a href="https://my.bethel.edu/">Faculty &amp; Staff</a></li>
-                        <li><a href="https://www.bethel.edu/church-relations/">Churches</a></li>
+                        <li><a href="/church-relations/">Churches</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="footer__grid-cell --address u-medium-2-5">
+            <div class="footer__gridCell footer__gridCell--address u-medium-2-5">
                 <div class="grid-pad-1x">
                     <div itemscope="" itemtype="https://schema.org/CollegeOrUniversity" class="bd">
                         <p class="h3 mb0"><span itemprop="legalName">Bethel University</span></p>
                         <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
                             <address><span itemprop="streetAddress">3900 Bethel Drive</span><br/>
                             <span itemprop="addressLocality">St. Paul</span>, <span itemprop="addressRegion">MN</span> <span itemprop="postalCode">55112</span></address>
-                            <p><a href="/about/maps-directions/">
-                                <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+                            <p><a class="icon" href="/about/maps-directions/">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                     <title>Location</title>
                                     <desc>Location icon</desc>
                                 <path d="M16 0c-5.523 0-10 4.477-10 10 0 10 10 22 10 22s10-12 10-22c0-5.523-4.477-10-10-10zM16 16c-3.314 0-6-2.686-6-6s2.686-6 6-6 6 2.686 6 6-2.686 6-6 6z"></path>
@@ -35,8 +35,8 @@
                     </div>
 
 
-                        <a href="https://www.facebook.com/betheluniversity">
-                            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+                        <a class="icon" href="https://www.facebook.com/betheluniversity">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                 <title>Facebook</title>
                                 <desc>Facebook icon</desc>
                                 <g id="icomoon-ignore">
@@ -44,36 +44,36 @@
                                 <path d="M26.667 0h-21.333c-2.933 0-5.334 2.4-5.334 5.334v21.332c0 2.936 2.4 5.334 5.334 5.334l21.333-0c2.934 0 5.333-2.398 5.333-5.334v-21.332c0-2.934-2.399-5.334-5.333-5.334zM27.206 16h-5.206v14h-6v-14h-2.891v-4.58h2.891v-2.975c0-4.042 1.744-6.445 6.496-6.445h5.476v4.955h-4.473c-1.328-0.002-1.492 0.692-1.492 1.985l-0.007 2.48h6l-0.794 4.58z"></path>
                             </svg>
                         </a>
-                        <a href="https://twitter.com/BethelU">
-                            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+                        <a class="icon" href="https://twitter.com/BethelU">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                 <title>Twitter</title>
                                 <desc>Twitter icon</desc>
                             <path d="M32 6.076c-1.177 0.522-2.443 0.875-3.771 1.034 1.355-0.813 2.396-2.099 2.887-3.632-1.269 0.752-2.674 1.299-4.169 1.593-1.198-1.276-2.904-2.073-4.792-2.073-3.626 0-6.565 2.939-6.565 6.565 0 0.515 0.058 1.016 0.17 1.496-5.456-0.274-10.294-2.888-13.532-6.86-0.565 0.97-0.889 2.097-0.889 3.301 0 2.278 1.159 4.287 2.921 5.465-1.076-0.034-2.088-0.329-2.974-0.821-0.001 0.027-0.001 0.055-0.001 0.083 0 3.181 2.263 5.834 5.266 6.437-0.551 0.15-1.131 0.23-1.73 0.23-0.423 0-0.834-0.041-1.235-0.118 0.835 2.608 3.26 4.506 6.133 4.559-2.247 1.761-5.078 2.81-8.154 2.81-0.53 0-1.052-0.031-1.566-0.092 2.905 1.863 6.356 2.95 10.064 2.95 12.076 0 18.679-10.004 18.679-18.68 0-0.285-0.006-0.568-0.019-0.849 1.283-0.926 2.396-2.082 3.276-3.398z"></path>
                             </svg>
                         </a>
-                        <a href="https://www.instagram.com/bethelumn">
-                            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+                        <a class="icon" href="https://www.instagram.com/bethelumn">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                 <title>Instagram</title>
                                 <desc>Instagram icon</desc>
                             <path d="M26.688 0h-21.375c-2.922 0-5.313 2.391-5.313 5.313v21.375c0 2.922 2.391 5.313 5.313 5.313h21.375c2.922 0 5.313-2.391 5.313-5.313v-21.375c0-2.922-2.391-5.313-5.313-5.313zM10.244 14h11.513c0.218 0.627 0.337 1.3 0.337 2 0 3.36-2.734 6.094-6.094 6.094s-6.094-2.734-6.094-6.094c0-0.7 0.119-1.373 0.338-2zM28 14.002v11.998c0 1.1-0.9 2-2 2h-20c-1.1 0-2-0.9-2-2v-12h3.128c-0.145 0.644-0.222 1.313-0.222 2 0 5.014 4.079 9.094 9.094 9.094s9.094-4.079 9.094-9.094c0-0.687-0.077-1.356-0.222-2l3.128 0.002zM28 7c0 0.55-0.45 1-1 1h-2c-0.55 0-1-0.45-1-1v-2c0-0.55 0.45-1 1-1h2c0.55 0 1 0.45 1 1v2z"></path>
                             </svg>
                         </a>
-                        <a href="https://www.linkedin.com/company/bethel-university">
-                            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+                        <a class="icon" href="https://www.linkedin.com/company/bethel-university">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                                 <title>LinkedIn</title>
                                 <desc>LinkedIn icon</desc>
                             <path d="M26.625 0h-21.25c-2.956 0-5.375 2.419-5.375 5.375v21.25c0 2.956 2.419 5.375 5.375 5.375h21.25c2.956 0 5.375-2.419 5.375-5.375v-21.25c0-2.956-2.419-5.375-5.375-5.375zM12 26h-4v-14h4v14zM10 10c-1.105 0-2-0.895-2-2s0.895-2 2-2 2 0.895 2 2-0.895 2-2 2zM26 26h-4v-8c0-1.105-0.895-2-2-2s-2 0.895-2 2v8h-4v-14h4v2.483c0.825-1.133 2.086-2.483 3.5-2.483 2.485 0 4.5 2.239 4.5 5v9z"></path>
                             </svg>
                         </a>
-                        <a href="https://www.youtube.com/betheluniversity">
-                        <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+                       <a class="icon" href="https://www.youtube.com/betheluniversity">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
                             <title>YouTube</title>
                             <desc>YouTube icon</desc>
                         <path d="M26 4h-20c-3.3 0-6 2.7-6 6v12c0 3.3 2.7 6 6 6h20c3.3 0 6-2.7 6-6v-12c0-3.3-2.7-6-6-6zM12 24v-16l10 8-10 8z"></path>
                         </svg>
                         </a>
-                        <a href="https://vimeo.com/betheluniversity">
-                            <svg class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <a class="icon" href="https://vimeo.com/betheluniversity">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                             <title>Vimeo</title>
                             <desc>Viemo icon</desc>
                             <path d="M31.988 8.563c-0.144 3.113-2.319 7.381-6.525 12.794-4.35 5.65-8.031 8.481-11.044 8.481-1.863 0-3.444-1.719-4.731-5.163-0.863-3.156-1.719-6.313-2.581-9.469-0.956-3.444-1.981-5.162-3.081-5.162-0.237 0-1.075 0.506-2.513 1.506l-1.506-1.938c1.581-1.387 3.138-2.775 4.669-4.162 2.106-1.819 3.688-2.775 4.744-2.875 2.487-0.237 4.025 1.463 4.6 5.106 0.619 3.931 1.050 6.375 1.294 7.331 0.719 3.263 1.506 4.894 2.369 4.894 0.669 0 1.675-1.056 3.019-3.175 1.337-2.113 2.056-3.725 2.156-4.831 0.194-1.825-0.525-2.744-2.156-2.744-0.769 0-1.556 0.175-2.369 0.525 1.575-5.15 4.575-7.65 9.012-7.506 3.281 0.087 4.831 2.219 4.644 6.388z"></path>
@@ -83,22 +83,22 @@
                 </div>
             </div>
 
-            <div class="footer__grid-cell">
+            <div class="footer__gridCell">
                 <div class="grid-pad-1x">
-                    <h2 class="h5">Resources</h2>
+                    <h2 class="h5  mt0  mt1--medium">Resources</h2>
                     <ul class="">
-                        <li><a href="/admissions/">Employment</a></li>
-                        <li><a href="https://blink.bethel.edu/">Calendar</a></li>
-                        <li><a href="/alumni/">Library</a></li>
-                        <li><a href="/parents/">Questions &amp; Comments</a></li>
-                        <li><a href="https://www.bethel.edu/human-resources/complaints-concerns/">Title IX Concerns</a></li>
+                        <li><a href="/employment/">Jobs at Bethel</a></li>
+                        <li><a href="/events/calendar/">Calendar</a></li>
+                        <li><a href="/library/">Library</a></li>
+                        <li><a href="/about/contact/questions-comments">Questions &amp; Comments</a></li>
+                        <li><a href="/human-resources/complaints-concerns/">Title IX Concerns</a></li>
                     </ul>
-                    <p><a class="btn" href="https://www.bethel.edu/giving/">Support Bethel</a></p>
+                    <p><a class="btn" href="/giving/">Support Bethel</a></p>
                 </div>
             </div>
         </div>
     </div>
     <div class="global__footer__copyright">
-        <p class="center pa1"><small>© 2018 Bethel University | <a href="#">Privacy Policy</a></small></p>
+        <p class="center pa1"><small>© 2018 Bethel University | <a href="/about/bethel-glance/accreditation/california-bppe/">CA Student Disclosures</a> | <a href="https://confluence.bethel.edu/x/pQonAQ">Privacy Policy</a></small></p>
     </div>
 </footer>
