--- a/src/templates/partials/global__navigation.hbs
+++ b/src/templates/partials/global__navigation.hbs
@@ -1,54 +1,54 @@
 <div class="global__toolbox" id="toolbox">
     <div class="inner global__toolboxGrid">
-        <a class="global__logo" href="http://www.bethel.edu"><img alt="Bethel University" src="https://www.bethel.edu/cdn/images/logo.png"/></a>
-        <a class="mt1  global__toolbox__close-btn  btn  btn-small" id="js-globalNav-button--close" href="#top">✖ close</a>
+        <a class="global__logo" href="https://www.bethel.edu"><img alt="Bethel University" src="https://www.bethel.edu/cdn/images/logo.png"/></a>
+        <a class="mt1  global__toolbox__close-btn  btn  btn-small" id="js-globalNav-button--close" href="#top">Close</a>
 
         <div class="nav__holder">
             <nav class="global__navigation" role="navigation">
                 <ul>
-                    <li><a href="http://www.bethel.edu/academics/">About</a></li>
-                    <li><a href="#" aria-haspopup="true">Admissions &amp; Aid</a>
+                    <li><a href="/about/">About</a></li>
+                    <li><a href="/admissions/" aria-haspopup="true">Admissions &amp; Aid</a>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">Undergrad</a></li>
-                            <li><a href="#">Graduate</a></li>
-                            <li><a href="#">Adult Undergrad</a></li>
-                            <li><a href="#">Seminary</a></li>
+                            <li><a href="/undergrad/admissions/">Undergrad</a></li>
+                            <li><a href="/graduate/admissions/">Graduate</a></li>
+                            <li><a href="/adult-undergrad/admissions/">Adult Undergrad</a></li>
+                            <li><a href="/seminary/admissions/">Seminary</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" aria-haspopup="true">Academics</a>
+                    <li><a href="/academics/" aria-haspopup="true">Academics</a>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">Undergrad</a></li>
-                            <li><a href="#">Graduate</a></li>
-                            <li><a href="#">Adult Undergrad</a></li>
-                            <li><a href="#">Seminary</a></li>
+                            <li><a href="/undergrad/academics/">Undergrad</a></li>
+                            <li><a href="/graduate/academics/">Graduate</a></li>
+                            <li><a href="/adult-undergrad/academics/">Adult Undergrad</a></li>
+                            <li><a href="/seminary/academics/">Seminary</a></li>
                         </ul>
                     </li>
-                    <li><a href="http://www.bethel.edu/faith/">Student Life</a></li>
-                    <li><a href="http://www.bethel.edu/faith/">Athletics</a></li>
-                    <li><a href="https://www.bethel.edu/academics/online">Faith</a></li>
+                    <li><a href="/undergrad/student-life/">Student Life</a></li>
+                    <li><a href="https://athletics.bethel.edu">Athletics</a></li>
+                    <li><a href="/christian-formation/">Faith</a></li>
                 </ul>
             </nav>
 
             <div class="quick-links">
                 <div class="quick-links left">
                     <ul>
-                        <li><a class="quick-links__my"href="http://www.bethel.edu/faith/">MyBethel</a></li>
-                        <li><a href="http://www.bethel.edu/about">Offices</a></li>
-                        <li><a href="http://www.bethel.edu/academics/">News</a></li>
-                        <li><a href="http://www.bethel.edu/admissions/">Events</a></li>
+                        <li><a class="quick-links__my"href="https://my.bethel.edu">MyBethel</a></li>
+                        <li><a href="/offices/">Offices</a></li>
+                        <li><a href="/news/">News</a></li>
+                        <li><a href="/events/">Events</a></li>
                     </ul>
                 </div>
 
                 <div class="quick-links right">
                     <ul>
-                        <li><a href="#">Apply</a></li>
-                        <li><a href="#">Visit</a></li>
-                        <li><a href="#">Give</a></li>
-                        <li><a href="#">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="12" viewBox="0 0 32 32">
+                        <li><a href="/admissions/apply/">Apply</a></li>
+                        <li><a href="/admissions/visit/">Visit</a></li>
+                        <li><a href="/giving/">Give</a></li>
+                        <li><a href="/search/">
+                            <svg version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" width="12" height="12" viewBox="0 0 32 32">
                                 <title>Search</title>
                                 <desc>Search icon</desc>
-                                <path d="M31.008 27.231l-7.58-6.447c-0.784-0.705-1.622-1.029-2.299-0.998 1.789-2.096 2.87-4.815 2.87-7.787 0-6.627-5.373-12-12-12s-12 5.373-12 12c0 6.627 5.373 12 12 12 2.972 0 5.691-1.081 7.787-2.87-0.031 0.677 0.293 1.515 0.998 2.299l6.447 7.58c1.104 1.226 2.907 1.33 4.007 0.23s0.997-2.903-0.23-4.007zM12 20c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z" fill="#cccccc"></path>
+                                <path d="M31.008 27.231l-7.58-6.447c-0.784-0.705-1.622-1.029-2.299-0.998 1.789-2.096 2.87-4.815 2.87-7.787 0-6.627-5.373-12-12-12s-12 5.373-12 12c0 6.627 5.373 12 12 12 2.972 0 5.691-1.081 7.787-2.87-0.031 0.677 0.293 1.515 0.998 2.299l6.447 7.58c1.104 1.226 2.907 1.33 4.007 0.23s0.997-2.903-0.23-4.007zM12 20c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"></path>
                             </svg>
                         </a></li>
                     </ul>
