--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -6,6 +6,7 @@
 <body class="no-js" id="top">
 <script type="text/javascript">document.body.className = document.body.className.replace("no-js","js");</script>
 
+	<div class="skipNav"><a href="#main">Skip to Main Content</a></div>
 	{{> global__navigation }}
 
 	<div class="inner-wrap--global__navigation" id="js-inner-wrap--global__navigation">
@@ -13,7 +14,9 @@
 		{{> school__navigation }}
 		{{!-- {{> site__navigation }} --}}
 		{{!-- {{> page__title }} --}}
-		{% body %}
+		<div id="main" role="main">
+			{% body %}
+		</div>
 		{{> action-nav }}
 		{{> global__footer }}
 	</div>
