--- a/src/templates/partials/global__navigation.hbs
+++ b/src/templates/partials/global__navigation.hbs
@@ -23,7 +23,7 @@
                             <li><a href="/seminary/academics/">Seminary</a></li>
                         </ul>
                     </li>
-                    <li><a href="/undergrad/student-life/">Student Life</a></li>
+                    <li><a href="/undergrad/student-life/" class="active">Student Life</a></li>
                     <li><a href="https://athletics.bethel.edu">Athletics</a></li>
                     <li><a href="/christian-formation/">Faith</a></li>
                 </ul>
