--- a/src/templates/partials/news.hbs
+++ b/src/templates/partials/news.hbs
@@ -2,13 +2,13 @@
     <div class="news__image">
         <a href="https://www.bethel.edu/news/articles/2018/august/melia-cerrato">
             <img class="lazyload" data-sizes="auto" data-srcset="
-            https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  200w,
-            https://cdn1.bethel.edu/resize/unsafe/300x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  300w,
-            https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  400w,
-            https://cdn1.bethel.edu/resize/unsafe/500x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  500w,
-            https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  600w,
-            https://cdn1.bethel.edu/resize/unsafe/700x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  700w,
-            https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  800w" alt="Melia Cerrato ’09 Embodies Servant Leadership" >
+            https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  200w,
+            https://cdn1.bethel.edu/resize/unsafe/300x0/smart/https://www.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  300w,
+            https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  400w,
+            https://cdn1.bethel.edu/resize/unsafe/500x0/smart/https://www.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  500w,
+            https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  600w,
+            https://cdn1.bethel.edu/resize/unsafe/700x0/smart/https://www.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  700w,
+            https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  800w" alt="Melia Cerrato ’09 Embodies Servant Leadership" >
         </a>
     </div>
     <div class="news__content">
@@ -21,7 +21,7 @@
 <div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
     <div class="news__image">    
         <a href="https://www.bethel.edu/news/articles/2018/august/campus-construction">
-            <img class="lazyload" data-sizes="auto" data-srcset="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/financial-markets-lab.jpg" alt="Summer Construction Brings a Fresh Look to Bethel Drive and Interior Spaces" src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/financial-markets-lab.jpg">
+            <img class="lazyload" data-sizes="auto" data-srcset="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/financial-markets-lab.jpg" alt="Summer Construction Brings a Fresh Look to Bethel Drive and Interior Spaces" src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/financial-markets-lab.jpg">
         </a>
     </div>
     <div class="news__content">
@@ -36,8 +36,8 @@
 <div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
     <div class="news__image">
         <a href="https://www.bethel.edu/news/articles/2018/august/new-faculty">
-            <img class=" lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/new-faculty.jpg"
-                alt="New College of Arts &amp; Sciences Professors Start this Fall" src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/new-faculty.jpg">
+            <img class=" lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/new-faculty.jpg"
+                alt="New College of Arts &amp; Sciences Professors Start this Fall" src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/new-faculty.jpg">
 
         </a>
     </div>
@@ -51,8 +51,8 @@
 <div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
     <div class="news__image">
         <a href="https://www.bethel.edu/news/articles/2018/august/harley-schreck-retires">
-            <img class=" lazyload" data-src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/harley-schreck.jpg"
-                alt="Harley Schreck Retires from the College of Arts &amp; Sciences" src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/harley-schreck.jpg">
+            <img class=" lazyload" data-src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/harley-schreck.jpg"
+                alt="Harley Schreck Retires from the College of Arts &amp; Sciences" src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/harley-schreck.jpg">
 
         </a>
     </div>
@@ -66,8 +66,8 @@
 <div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
     <div class="news__image">
         <a href="https://www.bethel.edu/news/articles/2018/august/michelle-davenport">
-            <img class=" lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/michelle-davenport.jpg"
-                alt="Michelle Davenport CAPS’12, GS’15 named CAPS/GS Alumna of the Year" src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/michelle-davenport.jpg">
+            <img class=" lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/michelle-davenport.jpg"
+                alt="Michelle Davenport CAPS’12, GS’15 named CAPS/GS Alumna of the Year" src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2018/images/michelle-davenport.jpg">
 
         </a>
     </div>
