--- a/src/css/global/global__navigation.css
+++ b/src/css/global/global__navigation.css
@@ -27,7 +27,7 @@
             display: flex;
             justify-content: flex-start;
             /* padding-right: 1.5em; */
-            margin: .8em .4em 0em .4em;
+            margin: .5em .4em;
         }
     }
     
@@ -40,39 +40,43 @@
             display: flex;
             position: relative;
             margin-bottom: 0;
-            border-bottom: .5em solid #123563;
         }
 
         li:focus-within {
             cursor: pointer;
-            border-bottom: .5em solid $bethel--yellow;
-            transition: border 250ms ease;
         }
 
         li:hover {
             cursor: pointer;
-            border-bottom: .5em solid $bethel--yellow;
-            transition: border 250ms ease;
         }
-        
+
+
+        li:hover a,
         li:focus-within a {
             outline: none;
+            color: $bethel--yellow;
         }
     }
 
     a {
         color: #fff;
-
+        
         @mixin respond-min $large {
             padding: .75rem 1rem;
         }
     }
-
+    
     a:hover {
+        color: $bethel--yellow;
+        transition: color 200ms ease;
         
         @mixin respond-min $large {
             text-decoration: none;
         }
+    }
+
+    a.active {
+        color: $bethel--yellow;
     }
 
     ul.dropdown {
@@ -85,30 +89,30 @@
 
         ul.dropdown {
             background: #fff;
-            background: #fff4d0;
-            border: 2px solid $bethel--yellow;
             visibility: hidden;
             opacity: 0;
             min-width: 13rem;
             position: absolute;
-            transition: opacity 250ms ease;
-            margin-top: 0;
-            top: 3.25rem;
-            left: 0;
-            margin-left: 0;
+            /* transition: opacity 1000ms cubic-bezier(0.075, 0.820, 0.165, 1.000); */
+            
+            margin: 0;
+            top: 2.7rem;
             font-size: .9rem;
             padding: 1.5em;
-            /* pointer-events: none; */
+            border-radius: 4px;
+            box-shadow: 0 50px 100px rgba(50,50,93,.1), 0 15px 35px rgba(50,50,93,.15), 0 5px 15px rgba(0,0,0,.1);
+            left: 50%;
+            display: block;
+            transform: translate(-50%, 5px);
+
 
             @mixin respond-min 1100px {
-                top: 3.5rem;
+                top: 2.9rem;
             }
         }
 
-
         ul.dropdown li:hover {
-            background: $bethel--yellow;
-            /* transition: background 250ms ease; */
+            text-decoration: underline;
         }
         
         ul li:hover > ul.dropdown,
@@ -119,8 +123,8 @@
             opacity: 1;
             display: block;
             z-index: 100;
-            /* transition: all 500ms ease; */
-            /* pointer-events: all; */
+            transform: translate(-50%, 0em);
+            transition: all .3s ease-in;
         }
         
         ul li ul.dropdown li {
