--- a/src/templates/partials/mobile__header.hbs
+++ b/src/templates/partials/mobile__header.hbs
@@ -1,7 +1,7 @@
     <div class="mobile__header" role="banner">
         <div class="inner">    
             <div class="mobile__logo">
-                <a href="http://www.bethel.edu"><img alt="Bethel University" src="https://www.bethel.edu/cdn/images/logo.png"/></a>
+                <a href="https://www.bethel.edu"><img alt="Bethel University" src="https://www.bethel.edu/cdn/images/logo.png"/></a>
             </div>
             <a class="burger" href="#toolbox" id="js-globalNav-button">
                 <span class="burger-icon"></span>
