adding max-height to hero

--- a/src/css/modules/hero.css
+++ b/src/css/modules/hero.css
@@ -1,12 +1,9 @@
 .heroVideo {
     position: relative;
     min-width: 100%;
-}
 
-.heroVideo--home {
     @mixin respond-min $large {
-        /* position: fixed; */
-        margin-top: -154px;
+        max-height: 80vh;
     }
 }
 
