adding print styles, and updating babel

--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -14,11 +14,11 @@
     <title><system-page-title/> | Bethel University Minnesota</title>
     <link href="https://www.bethel.edu/cdn/images/favicon.ico" rel="icon" type="image/x-icon"/> 
 
-    <link rel="stylesheet" type="text/css" href="css/quatro.css">
+    <link rel="stylesheet" type="text/css" href="css/pickles.css">
 
     {{!-- polyfill - picture element for ie11 --}}
     <script defer async src="https://cdn.polyfill.io/v2/polyfill.min.js?features=HTMLPictureElement&flags=gated"></script>
-    <script defer src="js/lazy.quatro.js"></script>
-    <script defer src="js/main.quatro.js"></script>
+    <script defer src="js/lazy.pickles.js"></script>
+    <script defer src="js/main.pickles.js"></script>
 
 </head>
